--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,15 +19,8 @@ jobs:
           java-version: 1.8
 
       - name: Build with Maven
-        run: mvn clean package
+        run: mvn -B clean package
 
-      - name: Package as ZIP
-        run: zip -r myproject.zip target/sudoku-1.0-SNAPSHOT.jar
-        env:
-          CI: true
+      - name: Test with Maven
+        run: mvn -B test
 
-      - name: Upload artifact
-        uses: actions/upload-artifact@v1
-        with:
-          name: sudoku.zip
-          path: sudoku.zip
